# OOOP

./: .gitignore
Lab 2 + lab 3 MyNotesMaker/: MyNotesMaker.pro  README.md  history.cpp  history.h  history.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savew.cpp  savew.h  savew.ui  savewindow.cpp  savewindow.h  savewindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  view.cpp  view.h  view.ui
MyNotesMaker/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.cpp  styles.cpp  styles.h  styles.qrc
MyNotesMaker/MyNotesMaker/: CMakeLists.txt  CMakeLists.txt.user.a900ca8  README.md  frameless.cpp  frameless.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  notemanager.cpp  notemanager.h  proxynotemanager.cpp  proxynotemanager.h  realnotemanager.cpp  realnotemanager.h  res.qrc  searchwidget.cpp  searchwidget.h  searchwidget.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  style.cpp  style.h
MyNotesMaker/MyNotesMaker/ExportStrategy/: export.h  exportcontext.cpp  exportcontext.h  html.cpp  html.h  pdf.cpp  pdf.h
MyNotesMaker/MyNotesMaker/FormattingCommand/: backgroundcolor.cpp  backgroundcolor.h  bold.cpp  bold.h  color.cpp  color.h  command.h  formatcommandsenum.h  formatter.cpp  invoker.cpp  invoker.h  italic.cpp  italic.h  underline.cpp  underline.h
MyNotesMaker/MyNotesMaker/MyNotesMaker/: CMakeLists.txt  main.cpp  mainwindow.h  searchwidget.h  settingswidget.h  style.cpp  style.h
MyNotesMaker/MyNotesMaker/MyNotesMaker/ExportStrategy/: exportcontext.h  html.cpp  html.h  pdf.cpp  pdf.h
MyNotesMaker/MyNotesMaker/MyNotesMaker/FormattingCommand/: backgroundcolor.cpp  command.h  formatcommandsenum.h  formatter.cpp  formatter.h  invoker.cpp  invoker.h  underline.h
MyNotesMaker/MyNotesMaker/MyNotesMaker/ParticleLife/: movetomouseworker.cpp  movetomouseworker.h  particle.cpp  particle.h  particlefactorymethod.cpp  particlelifewidget.cpp  particlelifewidget.h  particlelifewidget.ui
MyNotesMaker/MyNotesMaker/MyNotesMaker/QSidePanel/: PanelBottomSide.cpp  SidePanel.cpp  side_panel_helpers.cpp
MyNotesMaker/MyNotesMaker/MyNotesMaker/tests/: test_frameless.cpp  test_frameless.h
MyNotesMaker/MyNotesMaker/ParticleLife/: customscene.cpp  customscene.h  particle.cpp  particle.h  particlefactory.cpp  particlefactory.h  particlefactorymethod.cpp  particlefactorymethod.h  particlelifewidget.cpp  particlelifewidget.h  particlelifewidget.ui  particleworker.cpp  particleworker.h
MyNotesMaker/MyNotesMaker/QSidePanel/: PanelRightSide.cpp  SidePanel.hpp  side_panel_helpers.cpp
MyNotesMaker/MyNotesMaker/styles/: MacOS.qss
MyNotesMaker/MyNotesMaker/tests/: test_note.cpp  test_note.h  test_proxymanager.cpp  test_proxymanager.h  test_styles.cpp  test_styles.h
MyNotesMaker/tests/: test_styles.cpp  test_styles.h
Project CAREFUL BIRD/: README.md  carefulbird.json  coin.py  game.py  main.py  player.py  redbluesquares.json  spike.py
Project Color balls/: README.md  basket.py
UML/: Doxyfile  MyNotesMaker.pro  README.md  historywindow.cpp  historywindow.h  historywindow.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openai.hpp  settingswindow.cpp  settingswindow.h  settingswindow.ui  test_mynotesmaker.cpp  test_mynotesmaker.h
UML/UML diagrams/: MyNotesMaker.vpp  MyNotesMaker.vpp.bak_000f  MyNotesMaker.vpp.bak_001d  MyNotesMaker.vpp.bak_002d  MyNotesMaker.vpp.bak_003d  MyNotesMaker.vpp.bak_004d  README.md
UML/html/: annotated.html  class_history-members.html  class_history.html  class_history__coll__graph.dot  class_history_abd4ef64aa6864bdaa683b582b5f4922b_icgraph.dot  class_history_window-members.html  class_history_window.html  class_main_window-members.html  class_main_window.html  class_main_window__inherit__graph.dot  class_main_window_a61dca73d59a98eba97f4eec755229add_icgraph.dot  class_save_w-members.html  class_save_w.html  class_settings_window-members.html  class_settings_window.html  class_settings_window__coll__graph.dot  class_test___my_notes_maker-members.html  class_test___my_notes_maker.html  class_test___my_notes_maker__coll__graph.dot  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1input__stream__adapter-members.html  classdetail_1_1input__stream__adapter.html  (+386 more)
UML/rtf/: refman.rtf  (+18 more)
color balls/: main.py
lab1/: Date.cpp  Date.h  PriorityQueue.h  README.md  date.cc  date.h  doctest.h  main.cc  main.cpp  test.cpp
(+30 files in other folders)
